--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <title>Boolzapp</title>
 </head>
 <body>
-    
+    <div id="app">
+        <!-- header -->
+        <header></header>
+
+        <!-- main -->
+
+            <!-- section contatti -->
+
+            <!-- section conversazione -->
+    </div>
 
 
     <!-- link Vue -->
