creazione header e blocchi in main

--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
         <header></header>
 
         <!-- main -->
+        <main>
+            <div class="container">
 
-            <!-- section contatti -->
+                <!-- section contatti -->
+                <section class="contacts">
 
-            <!-- section conversazione -->
+                </section>
+
+                <!-- section conversazione -->
+                <section class="chat"></section>
+            </div>
+            
+        </main>
+        <!--chiusura main  -->
+
     </div>
-
+    <!-- chiusura div app -->
 
     <!-- link Vue -->
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
