inserimento icone top-main

--- a/index.html
+++ b/index.html
@@ -21,11 +21,29 @@
 
                 <!-- section contatti -->
                 <section class="contacts">
+                    <div class="top-main">
+                        <div></div>
 
+                        <div class="icons">
+                            <i class="fa-solid fa-circle-notch"></i>
+                            <i class="fa-solid fa-message center-icon"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
                 </section>
 
                 <!-- section conversazione -->
-                <section class="chat"></section>
+                <section class="chat">
+                    <div class="top-main">
+                        <div></div>
+
+                        <div class="icons">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <i class="fa-solid fa-paperclip center-icon"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+                </section>
             </div>
             
         </main>
