realizzazione sezione user

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
                 <!-- section contatti -->
                 <section class="contacts">
                     <div class="top-main">
-                        <div></div>
+                       
+                        <div id="user">
+                            <img src="img/avatar_io.jpg" alt="avatar user">
+                            <span>Romina</span>
+                        </div>
+                        
 
                         <div class="icons">
                             <i class="fa-solid fa-circle-notch"></i>
