realizzazione conversazione con msg

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                 <div class="avatar-name">Michele</div>
                                 <div class="info-text">Ultimo messaggio inviato</div>
                             </div>
+                            <div class="time-last-message">12:00</div>
                         </div>
 
                         <div class="chat-message avatar">
@@ -118,7 +119,32 @@
 
                     </div>
                     
-                    <div class="conversation"></div>
+                    <div class="conversation">
+                        <div class="box my-txt">
+                            <div>
+                                Hai portato a spasso il cane
+                            </div> 
+                            <div class="time">
+                                12:00
+                            </div> 
+                        </div>
+                        <div class="box my-txt">
+                            <div>
+                                Ricordati di stendere i panni
+                            </div> 
+                            <div class="time">
+                                12:00
+                            </div> 
+                        </div>
+                        <div class="box answer">
+                            <div>
+                                Tutto fatto!
+                            </div> 
+                            <div class="time">
+                                12:00
+                            </div> 
+                        </div>
+                    </div>
 
                     <div class="area-message">
                         <i class="fa-regular fa-face-smile"></i>
