overflow-y da sistemare

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                         <i class="fa-solid fa-microphone"></i>
                     </div>
                 </section>
+                <!-- chiusura section conversazione -->
             </div>
             
         </main>
