--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     
                     <!-- list chats -->
                     <div class="chats">
-                        <div class="chat-message avatar">
+                        <div class="chat-message avatar" v-for="contact in contacts">
                             <div class="chat-info">
-                                <img src="img/avatar_1.jpg" alt="avatar 2">
+                                <img :src="contact.avatar" alt="avatar 2">
                                 <div class="info-chat">
-                                    <div class="avatar-name">Michele</div>
+                                    <div class="avatar-name">{{contact.name}}</div>
                                     <div class="info-text">Ultimo messaggio inviato</div>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                             <div class="time-last-message">12:00</div>
                         </div>
 
-                        <div class="chat-message avatar">
+                        <!-- <div class="chat-message avatar">
                             <div class="chat-info">
                                 <img src="img/avatar_2.jpg" alt="avatar 2">
                                 <div class="info-chat">
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                            
-                            <div class="time-last-message">12:00</div>
+                            <div class="time-last-message">12:00</div> -->
                         </div>
                     </div>
                 </section>
