metodo: aggiunta di un messaggio completato

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
 
                     <div class="area-message">
                         <i class="fa-regular fa-face-smile"></i>
-                        <input type="text" placeholder="Scrivi un messaggio">
+                        <input type="text" placeholder="Scrivi un messaggio" 
+                        v-model="newMessage" 
+                        @keyup.enter="sendNewMessage">
                         <i class="fa-solid fa-microphone"></i>
                     </div>
                 </section>
