--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <i class="fa-solid fa-bell-slash"></i>
                         <div class="msg-notifications">
                             <span>Ricevi notifiche di nuovi messaggi</span>
-                            <a href="#">Attiva notiifiche desktop</a>
+                            <a href="#">Attiva notifiche desktop</a>
                         </div>
                     </div>
 
@@ -53,8 +53,7 @@
                         <input 
                         type="text" 
                         placeholder="Cerca o inizia una nuova chat"
-                        v-model="searchContact"
-                        @keyup.enter ="findNewContact">
+                        v-model="searchContact">
                     </div>
                     
                     <!-- list chats -->
@@ -72,7 +71,9 @@
                                 <img :src="contact.avatar" :alt="'immagine di ' + contact.name">
                                 <div class="info-chat">
                                     <div class="avatar-name">{{contact.name}}</div>
-                                    <div class="info-text">Ultimo messaggio inviato</div>
+                                    <div class="info-text">
+                                        {{contact.messages[contact.messages.length-1].message}}
+                                    </div>
                                 </div>
                             </div>
                            
